import React from 'react';
import { shallow, ShallowWrapper } from 'enzyme';
import toJson from 'enzyme-to-json';

import FileInput, { limitFileSize, requireFile } from './FileInput';

describe('Component: FileInput', () => {
  let fileInput: ShallowWrapper;

  let onChangeSpy: jest.Mock;
  let onBlurSpy: jest.Mock;

  function setup({
    value,
    valid,
    hasPlaceholder = true,
    hasLabel = true
  }: {
    value?: File;
    valid?: boolean;
    hasPlaceholder?: boolean;
    hasLabel?: boolean;
  }) {
    onChangeSpy = jest.fn();
    onBlurSpy = jest.fn();

    const props = {
      placeholder: hasPlaceholder ? 'Upload a file here' : undefined,
      accept: 'text/plain',
      value,
      onChange: onChangeSpy,
      onBlur: onBlurSpy,
      error: 'Some error',
      valid
    };

    if (hasLabel) {
      fileInput = shallow(
        <FileInput
          id="file-upload-with-button"
          label="Upload a file here"
          color="success"
          {...props}
        />
      );
    } else {
      fileInput = shallow(<FileInput color="success" {...props} />);
    }
  }

  describe('ui', () => {
    test('with value', () => {
      setup({ value: new File([''], 'maarten.png'), valid: true });

      fileInput.setState({ imageSrc: 'maarten.png' });

      expect(toJson(fileInput)).toMatchSnapshot(
        'Component: FileInput => ui => with value'
      );
    });

    test('empty value', () => {
      setup({ value: undefined, valid: false });

      expect(toJson(fileInput)).toMatchSnapshot(
        'Component: FileInput => ui => empty value'
      );
    });

    test('without placeholder', () => {
      setup({ value: undefined, valid: false, hasPlaceholder: false });

      expect(toJson(fileInput)).toMatchSnapshot(
        'Component: FileInput => ui => without placeholder'
      );
    });

    test('without label', () => {
      setup({ value: undefined, valid: false, hasLabel: false });

      expect(toJson(fileInput)).toMatchSnapshot(
        'Component: FileInput => ui => without label'
      );
    });
  });

  describe('events', () => {
    test('onChange', () => {
      setup({ value: undefined });

      const instance = fileInput.instance();
      jest.spyOn(instance, 'setState');

      const input = fileInput.find('input');

      const file = new File([''], 'maarten.png');

      // @ts-expect-error Test mock
      input.props().onChange({ target: { files: { item: () => file } } });

      expect(onChangeSpy).toHaveBeenCalledTimes(1);
      expect(onChangeSpy.mock.calls[0][0].name).toBe('maarten.png');

      expect(onBlurSpy).toHaveBeenCalledTimes(1);
    });

    test('onChange of Input should do nothing', () => {
      setup({ value: undefined });

      // @ts-expect-error Test mock
      fileInput
        .find('Input')
        .props()
        // @ts-expect-error Test mock
        .onChange();

      // It should not call the onChangesSpy at all.
      expect(onChangeSpy).toHaveBeenCalledTimes(0);
    });

    describe('onClick', () => {
      test('with value', () => {
        setup({ value: new File([''], 'maarten.png') });

        const input = fileInput.find('input');

        // @ts-expect-error Test mock
        fileInput.instance().inputRef = { current: { value: 'maarten.png' } };

        const eventDefaultSpy = jest.fn();
        // @ts-expect-error Test mock
        input.props().onClick({ preventDefault: eventDefaultSpy });

        expect(eventDefaultSpy).toHaveBeenCalledTimes(1);

        expect(onChangeSpy).toHaveBeenCalledTimes(1);
        expect(onChangeSpy).toHaveBeenCalledWith(null);

        expect(onBlurSpy).toHaveBeenCalledTimes(1);

        // @ts-expect-error Test mock
        expect(fileInput.instance().inputRef.current.value).toBe('');
      });

      test('without value', () => {
        setup({ value: undefined });

        const input = fileInput.find('input');

        const eventDefaultSpy = jest.fn();
        // @ts-expect-error Test mock
        input.props().onClick({ preventDefault: eventDefaultSpy });

        expect(eventDefaultSpy).toHaveBeenCalledTimes(0);
        expect(onChangeSpy).toHaveBeenCalledTimes(0);
        expect(onBlurSpy).toHaveBeenCalledTimes(0);
      });
    });
  });
});

test('requireFile', () => {
  const validator = requireFile('cv');

  // @ts-expect-error Even though it accepts File it will be given undefined and null
  expect(validator(undefined, {})).toEqual({
    data: { label: 'cv' },
    key: 'FileInput.REQUIRED',
    fallback: 'cv is required'
  });
  // @ts-expect-error Even though it accepts File it will be given undefined and null
  expect(validator(null, {})).toEqual({
    data: { label: 'cv' },
    key: 'FileInput.REQUIRED',
    fallback: 'cv is required'
  });

  expect(validator(new File([''], 'henkie.docx'), {})).toBe(undefined);
});

test('limitFileSize', () => {
  const validator = limitFileSize(1, 'cv');

  // @ts-expect-error Even though it accepts File it will be given undefined and null
  expect(validator(undefined, {})).toBe(undefined);

  // @ts-expect-error Even though it accepts File it will be given undefined and null
  expect(validator(null, {})).toBe(undefined);

  const smallFile = new File([''], 'small.docx');
  expect(validator(smallFile, {})).toBe(undefined);

  const largeFile = new File(['very long string'.repeat(100000)], 'large.docx');
  expect(validator(largeFile, {})).toEqual({
    data: { fileSize: '1.5', label: 'cv', size: '1.0' },
    fallback: 'cv file is to large. Max size is 1.0 MB file size is 1.5 MB',
    key: 'FileInput.SIZE_TOO_LARGE'
  });
});
